# EagleEye-Distributed-UAV-Vision

./: .gitignore  README.md
src/: CMakeLists.txt  package.xml
src/ground_station/: package.xml  setup.py
src/ground_station/ground_station/: detector_node.py
src/src/: image_publisher.cpp
